<resources>
    <string name="app_name">HospitalManagementSystem</string>
    <string name="bg" />
    <string name="welcome" />
    <string name="welcome1">Welcome to TakeCare</string>
    <string name="logo" />
    <string name="role">Choose your position</string>
    <string name="patient">I\'m a patient</string>
    <string name="doctor">I\'m a doctor</string>
    <string name="reg">Registration</string>
    <string name="email">enter your email</string>
    <string name="entermail">Enter your email</string>
    <string name="enterPhone">Enter your phone number</string>
    <string name="enterPassw">Enter your password in numbers</string>
    <string name="signup">sign up</string>
    <string name="login">Login to your account</string>
    <string name="signin">sign in</string>
    <string name="logo1">logo1</string>
    <string name="id">id</string>
    <string name="dddd">ID: 123</string>
    <string name="id1">ID: 1</string>
    <string name="patientname">Dina Abilova</string>
    <string name="doctorsname">Dr. Nursat Berikbayev</string>
    <string name="edit">Edit patient details</string>
    <string name="patientList">Patient list</string>
    <string name="complaints">Complaints</string>
    <string name="schedule">Scheduled Appointments</string>
    <string name="pill">pill</string>
    <string name="line">line bar</string>
    <string name="patientName">Dina Abilova</string>
    <string name="appointment">Make an appointment</string>
    <string name="test">My test results</string>
    <string name="doctors">My doctors</string>
    <string name="regnow">don\'t have an account</string>
    <string name="nnn">Enter your name</string>
    <string name="enterSurname">Enter your surname</string>
    <string name="entername" />
    <string name="enterName" />
    <string name="AppList">Appointment list</string>
    <string name="patientName1">Dina Abilova</string>
    <string name="age">21 y.o</string>
    <string name="ddd">January, 5</string>
    <string name="Date">Date: January, 5</string>
    <string name="Time">11:20 AM</string>
    <string name="neww">new!</string>
    <string name="patientName2">Adinur Admiralov</string>
    <string name="Date1">Date: December, 20</string>
    <string name="old">consulted</string>
    <string name="dfdfd" />
    <string name="patientName3">Mata Matoi</string>
    <string name="Date2">Date: December, 2</string>
    <string name="makeApp">Make an Appointment</string>
    <string name="doctor2">Dr. Aruzhan Balken</string>
    <string name="doctor3">Dr. Miras Amanzhol</string>
    <string name="doctorNurs">Surgeon</string>
    <string name="doctorAru">Dermatologist</string>
    <string name="doctorMiras">Cardiologist</string>
    <string name="makeAppp">request</string>
    <string name="success">successReq</string>
    <string name="successReq">Dina Abilova, your request was successful</string>
    <string name="wait">Wait for some minutes, and the administrator will call you to confirm the appointment</string>
    <string name="back">back to menu</string>
    <string name="logout">LOG OUT</string>
    <string name="areusure">Dina Abilova, are you sure to log out?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="docareusure">Dr. Nursat Berikbayev, are you sure you want to log out?</string>
    <string name="testDone">Your test results on thyroid hormones are ready!</string>
    <string name="testID">Enter your test ID</string>
    <string name="passcode">Test passcode</string>
    <string name="download">download PDF</string>
</resources>