<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8F5F6"
    tools:context=".Request">

    <ImageView
        android:id="@+id/takeCare4"
        android:layout_width="242dp"
        android:layout_height="68dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="668dp"
        android:contentDescription="@string/logo1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="663dp"
        android:contentDescription="@string/pill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/icons8_pill_48" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="297dp"
        android:layout_height="73dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="56dp"
        android:text="@string/successReq"
        android:textColor="#00BCD4"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="397dp"
        android:layout_height="111dp"
        android:layout_marginTop="39dp"
        android:text="@string/wait"
        android:textColor="#00BCD4"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <Button
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="167dp"
        android:background="#84D7DD"
        android:fontFamily="@font/cabin_bold"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />
</androidx.constraintlayout.widget.ConstraintLayout>